--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,8 +1,13 @@
 _repo: The-Bible-Douay-Rheims-Old-Testament---Part-2_1610
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 description: Old Testament Part 2 is vol II of III. See also Complete (vol I-III)
   PG#8300 and Complete version (vol I-III with Appendices) PG#1581 and OT (vol I)
   PG#1609 and NT (vol III) PG#1582
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1610#The-Bible-Douay-Rheims-Old-Testament---Part-2
 edition_note: Challoner's revised Douay-Rheims Version (Old Testament 1609 & 1610).
   The Whole Revised and Diligently Compared with the Latin Vulgate by Bishop Richard
   Challoner A.D. 1749-1752
